@@ -49,6 +49,11 @@ public class DropsPriority extends IStreamerPriority{
 		return 0;
 	}
 	
+	@Override
+	public boolean isDropsRelated(){
+		return true;
+	}
+	
 	private boolean hasCampaigns(@NotNull IMiner miner, @NotNull Streamer streamer){
 		return Optional.ofNullable(streamer.getDropsHighlightServiceAvailableDrops())
 				.map(DropsHighlightServiceAvailableDropsData::getChannel)
@@ -79,17 +84,16 @@ public class DropsPriority extends IStreamerPriority{
 				.filter(Objects::nonNull)
 				.flatMap(Collection::stream)
 				.collect(Collectors.groupingBy(dropBenefitEdge -> dropBenefitEdge.getBenefit().getId()))
-				.values()
-				.stream()
-				.map(dropBenefitEdges ->
-						dropBenefitEdges.stream()
-								.reduce((benefit1, benefit2) ->
-										new DropBenefitEdge(benefit1.getBenefit(),
-												benefit1.getEntitlementLimit() + benefit2.getEntitlementLimit(),
-												Optional.ofNullable(benefit1.getClaimCount()).orElse(0) + Optional.ofNullable(benefit2.getClaimCount()).orElse(0)))
-								.orElseThrow()
+				.values().stream()
+				.map(dropBenefitEdges -> dropBenefitEdges.stream()
+						.reduce((benefit1, benefit2) -> new DropBenefitEdge(
+								benefit1.getBenefit(),
+								benefit1.getEntitlementLimit() + benefit2.getEntitlementLimit(),
+								Optional.ofNullable(benefit1.getClaimCount()).orElse(0) + Optional.ofNullable(benefit2.getClaimCount()).orElse(0))
+						)
+						.orElseThrow(() -> new IllegalStateException("Failed to get reduced benefit edge, shouldn't be possible"))
 				)
-				.collect(Collectors.toList());
+				.toList();
 		
 		var result = dropCampaign.getTimeBasedDrops().stream().anyMatch(timeBasedDrop -> isValidDrop(miner, timeBasedDrop, possibleEntitlements));
 		if(!result){
@@ -98,7 +102,7 @@ public class DropsPriority extends IStreamerPriority{
 		return result;
 	}
 	
-	private boolean isValidDrop(@NotNull IMiner miner, @NotNull TimeBasedDrop timeBasedDrop, List<DropBenefitEdge> possibleEntitlements){
+	private boolean isValidDrop(@NotNull IMiner miner, @NotNull TimeBasedDrop timeBasedDrop, @NotNull List<DropBenefitEdge> possibleEntitlements){
 		var now = TimeFactory.nowZoned();
 		
 		if(Optional.ofNullable(timeBasedDrop.getStartAt()).map(date -> date.isAfter(now)).orElse(false)){
@@ -113,13 +117,13 @@ public class DropsPriority extends IStreamerPriority{
 		var result = Optional.ofNullable(timeBasedDrop.getBenefitEdges())
 				.stream()
 				.flatMap(Collection::stream)
-				.anyMatch(timeBasedDropBenefitEdge ->
-						isValidBenefit(miner, timeBasedDrop.getStartAt(),
-								possibleEntitlements.stream()
-										.filter(possibleEntitlementDropBenefitEdge ->
-												timeBasedDropBenefitEdge.getBenefit().getId().equals(possibleEntitlementDropBenefitEdge.getBenefit().getId()))
-										.findFirst()
-										.orElse(timeBasedDropBenefitEdge)));
+				.anyMatch(timeBasedDropBenefitEdge -> {
+					var dropBenefitEdge = possibleEntitlements.stream()
+							.filter(possibleEntitlementDropBenefitEdge -> Objects.equals(timeBasedDropBenefitEdge.getBenefit().getId(), possibleEntitlementDropBenefitEdge.getBenefit().getId()))
+							.findFirst()
+							.orElse(timeBasedDropBenefitEdge);
+					return isValidBenefit(miner, timeBasedDrop.getStartAt(), dropBenefitEdge);
+				});
 		if(!result){
 			log.trace("Drop {} has no valid benefit", timeBasedDrop.getId());
 		}
@@ -136,10 +140,11 @@ public class DropsPriority extends IStreamerPriority{
 				.filter(userDropReward -> Objects.equals(userDropReward.getId(), dropBenefitEdge.getBenefit().getId()))
 				.findFirst()
 				.map(userDropReward ->
-						userDropReward.getTotalCount() < dropBenefitEdge.getEntitlementLimit() ||
-								Optional.ofNullable(userDropReward.getLastAwardedAt())
-										.map(last -> Optional.ofNullable(startAt).map(last::isBefore).orElse(false))
-										.orElse(true))
+						userDropReward.getTotalCount() < dropBenefitEdge.getEntitlementLimit()
+								|| Optional.ofNullable(userDropReward.getLastAwardedAt())
+								.map(last -> Optional.ofNullable(startAt).map(last::isBefore).orElse(false))
+								.orElse(true)
+				)
 				.orElse(true);
 	}
 }
